--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,7 +1,7 @@
 colors:
   # Default colors
   primary:
-    background: '#000000'
+    background: "#1e2127"
     foreground: '#FFFFFF'
 
   # Normal colors
@@ -26,7 +26,7 @@ colors:
     cyan: "#16a085"
     white: "#ffffff"
 
-background_opacity: 0.9
+background_opacity: 1
 
 font:
   normal:
@@ -44,7 +44,7 @@ font:
 
   # Point size
   size: 10.0
-
+ 
   offset:
     x: 0
     y: 0
@@ -52,10 +52,10 @@ font:
     x: 0
     y: 0
 
-  #window:
+window:
   padding:
-    x: 0
-    y: 0
+    x: 2
+    y: 2
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
